--- a/debug all recognition fail problem.ipynb
+++ b/debug all recognition fail problem.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/olir/workspace/genshin_artifact_scanner/scanner/artifacts.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2 as cv\n",
     "from scanner import ROI\n",
@@ -37,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,27 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ArtifactROI(main=[303, 37, 375, 107], sub=[307, 147, 450, 197], level=[312, 132, 331, 142], title=[410, 8, 467, 20])\n"
-     ]
-    }
-   ],
-   "source": [
-    "while True:\n",
-    "  frame = reader.next()\n",
-    "  if not state.is_same(frame):\n",
-    "    break\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -188,6 +160,13 @@
     "artifacts.append(result)\n",
     "print(f'{reader.frame_time:.4f}', info)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -206,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.9 (main, Dec 15 2022, 10:44:50) [Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "orig_nbformat": 4,
   "vscode": {
